11/4/09 wire up Before and After displays for "Real Reactions" module
11/4/09 wire up radio buttons and a temporary formula in "Real Reactions" module
11/4/09 reaction models for "Real Reactions" module
11/4/09 fix leftovers histogram
11/4/09 use immutable arrays for reactants and products in chemical reaction
11/4/09 extract base classes for Before and After displays
11/4/09 add cleanup methods to anything that listens to model
11/4/09 completed generalization of After box
11/4/09 cleanup SubstanceNode when removed from scenegraph to prevent memory leak
11/4/09 make QuantityDisplayNode listen to model
11/4/09 add Sandwich model element, the only substance that has a dynamic image
11/4/09 make Substance notify when its image has changed, SubstanceNode listens for changes and updates view
11/4/09 replace Substance.getNode with Substance.getImage
11/4/09 require that a reaction have at least 2 reactants and 1 product
11/3/09 fix layout of controls and images in SandwichShopBeforeNode
11/3/09 chose to use spinners instead of sliders for reactant quantity controls (Kelly, 10/28)
11/3/09 generalize Before box in Sandwich Shop
11/3/09 simplify SandwichNode constructor
10/29/09 quick-and-dirty conversion of the rest of Sandwich Shop to new model, additional generalization required
10/28/09 sync new and old model until fully converted to new model
10/28/09 generalize implementation of sandwich formula node, use new model
10/28/09 generalized model of chemical reaction
10/28/09 add symbols to RPALSymbols
10/28/09 fix positioning of sandwich image on rhs of formula
10/28/09 use darker fill color for histogram bars
# 0.00.09 (35970) Oct 21, 2009
10/21/09 same as version 0.00.08, but replace sliders with spinners
# 0.00.08 (35968) Oct 21, 2009
10/21/09 dev version with change requests
10/21/09 switch between spinners or sliders for quantity controls
10/21/09 3D-looking slider knob from Noah P.
10/21/09 hide product histogram under After box when formula is not a reaction